# src/routes/login.ts
@@ -2,6 +2,7 @@ const express = require('express');
 import { Request, Response } from 'express';
 const passport = require('passport');
 import {Logout} from "../controller/login";
+import {isLoggedIn} from "../controller/login";
 require('../middleware/auth')
 
 export const router = express.Router();
@@ -13,5 +14,5 @@ router.get('/auth/google/callback', passport.authenticate('google', {
     failureRedirect: '/',
 }));
 
-router.get('/logout', Logout)
+router.get('/logout', isLoggedIn, Logout)
 
